# SimonRaytracer

./: Doxyfile  LICENSE  README.md  cmake_build.ps1  cmake_build.sh  cmake_config.ps1  cmake_config.sh  config1.json  config2.json  config3.json  config4.json  config5.json
doc/: OutputHandler_8cpp.html  OutputHandler_8cpp__incl.dot  OutputHandler_8hpp.html  OutputHandler_8hpp__dep__incl.dot  OutputHandler_8hpp__incl.dot  OutputHandler_8hpp_source.html  TBRDF_8cpp.html  TBRDF_8cpp__incl.dot  TBRDF_8h.html  TBRDF_8h__dep__incl.dot  TBRDF_8h_source.html  annotated.html  area__light_8hpp.html  area__light_8hpp__dep__incl.dot  area__light_8hpp__incl.dot  area__light_8hpp_source.html  bounding__box_8cpp.html  bounding__box_8cpp__incl.dot  bounding__box_8hpp.html  bounding__box_8hpp__dep__incl.dot  bounding__box_8hpp__incl.dot  bounding__box_8hpp_source.html  bvh__node_8cpp.html  bvh__node_8cpp__incl.dot  bvh__node_8hpp.html  bvh__node_8hpp__dep__incl.dot  bvh__node_8hpp__incl.dot  bvh__node_8hpp_source.html  classAreaLight-members.html  classAreaLight.html  classAreaLight__coll__graph.dot  classAreaLight__inherit__graph.dot  classBRDF-members.html  classBRDF.html  classBVHNode-members.html  classBVHNode.html  classBVHNode__coll__graph.dot  classBoundingBox-members.html  classBoundingBox.html  classBoundingBox__coll__graph.dot  (+366 more)
doc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enums_2.js  (+61 more)
output/: convert.ps1
scene/: CornellBox-Bunny.mtl  CornellBox-Bunny.txt  CornellBox-Dragon.mtl  CornellBox-Dragon.txt  CornellBox-Sphere.mtl  box-advanced.mtl
src/: CMakeLists.txt  OutputHandler.cpp  OutputHandler.hpp  area_light.hpp  bounding_box.cpp  bounding_box.hpp  bvh_node.cpp  bvh_node.hpp  constants.hpp  context.cpp  context.hpp  geomath.cpp  geomath.hpp  kernel.cu  light.hpp  main.cpp  mat3.hpp  material.hpp  object.hpp  point_light.hpp  ray.hpp  render_engine.cpp  render_engine.hpp  scene.cpp  scene.hpp  texture.hpp  triangle.cpp  triangle.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vertex.hpp
src/gpu_code/: gpu_BRDF.cuh  gpu_area_light.cuh  gpu_bounding_box.cu  gpu_bounding_box.cuh  gpu_bvh_node.cuh  gpu_context.cuh  gpu_geomath.cu  gpu_geomath.cuh  gpu_mat3.cuh  gpu_material.cuh  gpu_object.cuh  gpu_pair.cuh  gpu_point_light.cuh  gpu_rand.cuh  gpu_ray.cuh  gpu_render_engine.cu  gpu_render_engine.cuh  gpu_scene.cuh  gpu_texture.cuh  gpu_triangle.cu  gpu_triangle.cuh  gpu_vec2.cu  gpu_vec2.cuh  gpu_vec3.cu  gpu_vec3.cuh  gpu_vertex.cuh
src/include/: TBRDF.cpp  TBRDF.h  json.hpp  lodepng.cpp  lodepng.h
(+12 files in other folders)
